--- a/css/main.css
+++ b/css/main.css
@@ -3,9 +3,13 @@ body {
     padding: 0;
     background: #222;
     color: #fff;
-    font-family: sans-serif;
+    font-family: monospace, sans-serif;
     box-sizing: border-box;
     width: 300px;
+}
+
+h3 {
+    font-weight: normal;
 }
 
 *,
@@ -42,4 +46,16 @@ button {
     border: 1px solid #555;
     padding: 5px 7px;
     cursor: pointer;
+    font-family: monospace;
+}
+
+.flex-container {
+    display: flex;
+    gap: 5px;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.fg-1 {
+    flex-grow: 1;
 }
